// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-css-modules build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
      <meta charset=\\"UTF-8\\">
      <title>My Awesome Project</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/skuDefaultClientEntry-b8efa93ad3ab8918f8db.css\\">
    </head>
    <body>
      <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f31154b442e59ba52e55.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~skuDefaultClientEntry-1d95f7f495034eec0220.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/skuDefaultClientEntry-3e8de5a9b0f57b968818.js\\"></script>
    
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>My Awesome Project</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/skuDefaultClientEntry-b8efa93ad3ab8918f8db.css\\" />
    </head>
    <body>
      <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f31154b442e59ba52e55.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~skuDefaultClientEntry-1d95f7f495034eec0220.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/skuDefaultClientEntry-3e8de5a9b0f57b968818.js\\"></script>
    </body>
  </html>
",
  "warnings": Array [],
}
`;

exports[`typescript-css-modules build should generate the expected files 1`] = `
Object {
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "production/au/index.html": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>My Awesome Project</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/skuDefaultClientEntry-b8efa93ad3ab8918f8db.css\\" />
    </head>
    <body>
      <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f31154b442e59ba52e55.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~skuDefaultClientEntry-1d95f7f495034eec0220.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/skuDefaultClientEntry-3e8de5a9b0f57b968818.js\\"></script>
    </body>
  </html>
",
  "runtime-f31154b442e59ba52e55.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "skuDefaultClientEntry-3e8de5a9b0f57b968818.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "skuDefaultClientEntry-b8efa93ad3ab8918f8db.css": "._1brbpTo{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}._1brbpTo ._3YtmnHj{font-size:32px}
.Jlnxw97{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.Jlnxw97 .lwsthgY{color:red}
",
  "vendors~skuDefaultClientEntry-1d95f7f495034eec0220.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules build-ssr should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
          <meta charset=\\"UTF-8\\">
          <title>My Awesome Project</title>
          <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
          <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/skuDefaultClientEntry-b8efa93ad3ab8918f8db.css\\">
        </head>
        <body>
          <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
          <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f31154b442e59ba52e55.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~skuDefaultClientEntry-1d95f7f495034eec0220.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/skuDefaultClientEntry-3e8de5a9b0f57b968818.js\\"></script>
        
      
    </body></html>",
  "errors": Array [],
  "sourceHtml": "
      <!DOCTYPE html>
      <html>
        <head>
          <meta charset=\\"UTF-8\\">
          <title>My Awesome Project</title>
          <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
          <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/skuDefaultClientEntry-b8efa93ad3ab8918f8db.css\\" />
        </head>
        <body>
          <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
          <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-f31154b442e59ba52e55.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~skuDefaultClientEntry-1d95f7f495034eec0220.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/skuDefaultClientEntry-3e8de5a9b0f57b968818.js\\"></script>
        </body>
      </html>
    ",
  "warnings": Array [],
}
`;

exports[`typescript-css-modules build-ssr should generate the expected files 1`] = `
Object {
  "assets.json": "{\\"skuDefaultClientEntry\\":{\\"js\\":[\\"http://localhost:4003/runtime-f31154b442e59ba52e55.js\\",\\"http://localhost:4003/vendors~skuDefaultClientEntry-1d95f7f495034eec0220.js\\",\\"http://localhost:4003/skuDefaultClientEntry-3e8de5a9b0f57b968818.js\\"],\\"css\\":\\"http://localhost:4003/skuDefaultClientEntry-b8efa93ad3ab8918f8db.css\\"}}",
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "runtime-f31154b442e59ba52e55.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "server.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "skuDefaultClientEntry-3e8de5a9b0f57b968818.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "skuDefaultClientEntry-b8efa93ad3ab8918f8db.css": "._1brbpTo{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}._1brbpTo ._3YtmnHj{font-size:32px}
.Jlnxw97{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.Jlnxw97 .lwsthgY{color:red}
",
  "vendors~skuDefaultClientEntry-1d95f7f495034eec0220.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
      <meta charset=\\"UTF-8\\">
      <title>My Awesome Project</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/skuDefaultClientEntry-2dcacdfe37ba3e3dcf4b.css\\">
    </head>
    <body>
      <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY\\">Hello World</div></div></div>
      <script type=\\"text/javascript\\" src=\\"/runtime-3d179b241d850712e66b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~skuDefaultClientEntry-3cca5382a9bdf26cb5bc.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/skuDefaultClientEntry-869bb38f827acae925c2.js\\"></script>
    
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>My Awesome Project</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/skuDefaultClientEntry-2dcacdfe37ba3e3dcf4b.css\\" />
    </head>
    <body>
      <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY\\">Hello World</div></div></div>
      <script type=\\"text/javascript\\" src=\\"/runtime-3d179b241d850712e66b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~skuDefaultClientEntry-3cca5382a9bdf26cb5bc.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/skuDefaultClientEntry-869bb38f827acae925c2.js\\"></script>
    </body>
  </html>
",
  "warnings": Array [],
}
`;
